grpc/basic_grpc_with_python/ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Creates an EC2 Instance

Parameters:
  
  EC2InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.medium

  ToolsServerImageId:
    Description: EC2 instance type
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-ebs

  EC2Startup:
    Description: EC2 Instance Start - Set to 1 when EC2 Instance is needed
    Type: Number
    Default: 1
  
  EC2KeyName:
    Description: EC2 Pem Key Name
    Type: String
    Default: cloudavail-key

Mappings: {}

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  PublicInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicInternetRouteTable

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicInternetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref VPC

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicInternetRouteTable
      SubnetId: !Ref PublicSubnet
  
  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 Instance Security Group
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress: []
      VpcId: !Ref VPC

  EC2InstanceLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        IamInstanceProfile:
          Arn: !GetAtt EC2InstanceInstanceProfile.Arn
        ImageId: !Ref ToolsServerImageId
        InstanceType: !Ref EC2InstanceType
        KeyName: !Ref EC2KeyName
        NetworkInterfaces:
          - AssociatePublicIpAddress: true
            DeviceIndex: 0
            Groups: [ !GetAtt EC2InstanceSecurityGroup.GroupId ]
        UserData:
          Fn::Base64: |
            #!/bin/bash
            # install byobu - allows multi-window management for terminal
            yum -y get-update
            amazon-linux-extras install -y epel
            yum -y install byobu

  EC2InstanceAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity: !Ref EC2Startup
      LaunchTemplate: 
        LaunchTemplateId: !Ref EC2InstanceLaunchTemplate
        Version: !GetAtt EC2InstanceLaunchTemplate.LatestVersionNumber
      MaxSize: !Ref EC2Startup
      MinSize: !Ref EC2Startup
      VPCZoneIdentifier:
        - !Ref PublicSubnet
      Tags: 
        - Key: Name
          Value: !Sub ${AWS::StackName}-asg
          PropagateAtLaunch: true

  EC2InstanceInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
      - Ref: EC2InstanceIAMRole

  EC2InstanceIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
